# AI-plays-getting-over-it

./: .gitignore  AGENTS.md  README.md  contributions.md  goi_live_position.py  goi_memory_probe.py  goi_observation_schema.py  goi_observation_state.py  goi_ptrace_il2cpp.py  pyproject.toml
docs/: observation-roadmap.md  observation-schema.md  player-movement.md
src/aiget/: __init__.py  action_sender.py  benchmark_observation.py  check_env.py  cli_utils.py  env.py  frame_capture.py  live_layout.py  live_position.py  memory_probe.py  observation_schema.py  observation_state.py  observation_vector.py  ptrace_il2cpp.py  random_rollout.py  test_reset.py  train_sac.py
tests/: README.md  test_cli_wrappers.py  test_env_safety.py  test_live_layout.py  test_live_position.py  test_observation_schema.py  test_observation_state.py  test_observation_vector.py  test_project_layout.py  test_ptrace_il2cpp.py
