[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aiget"
version = "0.1.0"
description = "Runtime tooling for Getting Over It RL experiments on Linux."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
aiget-live-position = "aiget.live_position:main"
aiget-memory-probe = "aiget.memory_probe:main"
aiget-observation-schema = "aiget.observation_schema:main"
aiget-ptrace-il2cpp = "aiget.ptrace_il2cpp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
